--- a/src/main/webapp/easyui/my/core.css
+++ b/src/main/webapp/easyui/my/core.css
@@ -125,6 +125,30 @@ orange {
     color: orange;
 }
 
+.btn.default {
+    color: #0c80d7;
+}
+
+.btn.red {
+    color: #f00;
+}
+
+.btn.green {
+    color: #0c0;
+}
+
+.btn.yellow {
+    color: yellow;
+}
+
+.btn.blue {
+    color: blue;
+}
+
+.btn.orange {
+    color: orange;
+}
+
 .buttonSplit {
     display: inline-block;
     width: 1px;
