--- a/src/main/webapp/easyui/my/core.css
+++ b/src/main/webapp/easyui/my/core.css
@@ -35,6 +35,10 @@
     height: 100%;
 }
 
+.tabs-panels {
+    border: none !important;
+}
+
 .globalPane {
     box-shadow: 0 1px 2px rgba(90, 90, 90, 0.15);
     position: absolute;
