--- a/src/main/webapp/easyui/themes/insdep/insdep_theme_default.css
+++ b/src/main/webapp/easyui/themes/insdep/insdep_theme_default.css
@@ -554,20 +554,27 @@ i, cite, em, var, address, dfn { /*斜体*/
 
 /*登录框架开始*/
 .theme-login-layout {
-    background: #eef0ed url(images/loginbg.jpg);
+    /*background: #eef0ed url(images/loginbg.jpg);*/
+}
+
+#theme-login-form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -200px;
+    margin-top: -125px;
 }
 
 /*登录form框架*/
 #theme-login-form {
     width: 400px;
-    margin: 0 auto 20px auto;
+    /*margin: 0 auto 20px auto;*/
     border-radius: 8px;
     box-shadow: #222 2px 2px 15px;
     background: #fff;
     overflow: hidden;
     clear: both;
     padding: 25px 0 20px;
-    position: relative;
 }
 
 #theme-login-form .QRcode {
@@ -652,7 +659,7 @@ i, cite, em, var, address, dfn { /*斜体*/
     width: 800px;
     margin: 0 auto;
     text-align: center;
-    color: #eee;
+    color: #303133;
 }
 
 .theme-login-footer, .login-footer dl {
@@ -681,7 +688,7 @@ i, cite, em, var, address, dfn { /*斜体*/
 }
 
 #theme-login-form dl dd {
-    margin: 0 0 5px;
+    margin: 0 0 10px;
     clear: both;
     height: auto;
     overflow: hidden;
@@ -690,6 +697,50 @@ i, cite, em, var, address, dfn { /*斜体*/
 #theme-login-form dl dt img {
     margin: 0 auto 30px auto;
     display: block;
+}
+
+#theme-login-form dl dt .title {
+    font-family: "宋体";
+    color: #303133;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+#theme-login-form dl dd label {
+    display: inline-block;
+    width: 60px;
+    text-align: right;
+    font-size: 14px;
+    color: #303133;
+}
+
+#theme-login-form dl dd .theme-login-text {
+    height: 30px;
+    width: 234px;
+    border: 1px solid #ccc;
+    text-indent: 5px;
+}
+
+#theme-login-form dl dd .theme-login-message {
+    display: block;
+    font-size: 14px;
+    text-align: center;
+    color: #ff4136;
+}
+
+#theme-login-form dl dd .theme-login-btn {
+    display: block;
+    width: 100%;
+    height: 30px;
+    background: #009ce4;
+    color: #fff;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+#theme-login-form dl dd .theme-login-btn:hover {
+    background-color: #0c80d7;
 }
 
 /*登录表单*/
@@ -866,7 +917,6 @@ i, cite, em, var, address, dfn { /*斜体*/
 }
 
 /*登录表单*/
-
 /*登录框架结束*/
 
 /*主框架*/
