【新增】商品批量导出

--- a/src/main/webapp/easyui/my/report.css
+++ b/src/main/webapp/easyui/my/report.css
@@ -28,3 +28,7 @@ table ul li:last-child {
 table .gray {
     background: #eee;
 }
+
+#lineTd {
+    background: #EAF1D3 url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMDAlIiBoZWlnaHQ9IjEwMCUiPjxsaW5lIHgxPSIwIiB5MT0iMCIgeDI9IjEwMCUiIHkyPSIxMDAlIiBzdHJva2U9ImJsYWNrIiBzdHJva2Utd2lkdGg9IjEiLz48L3N2Zz4=) no-repeat 100% center;
+}
